--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <svg id="flow" height="600" width="900"> </svg>
-  <script type="text/javascript " src="js/script.js "></script>
+  <script type="text/javascript " src="js/bundle.js "></script>
 </body>
 
 </html>
