added sliders to select the weight of each coefficient

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
   <svg id="flow" height="600" width="900"> </svg>
+  <div id="sliders"></div>
+
   <script type="text/javascript " src="js/bundle.js "></script>
 </body>
 
