--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
 
 <head>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <title>Natural Gas Model</title>
 </head>
 
 <body>
-  <svg id="flow" height="600" width="900"> </svg>
-  <div id="sliders"></div>
+  <div class="container" height="600">
+    <svg id="flow" height="600" width="900" class="left"> </svg>
+    <div id="error" class="right">
+      <p id="error-text">Error: </p>
+    </div>
+  </div>
+  <div class="container">
+    <div id="sliders"></div>
+  </div>
 
   <script type="text/javascript " src="js/bundle.js "></script>
 </body>
