syntax changes based on back-and-forth with @bardiches

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="container" height="600">
     <svg id="flow" height="600" width="900" class="left"> </svg>
     <div id="error" class="right">
-      <p id="error-text">Error: </p>
+      <p id="error-text" height="600">Error: </p>
     </div>
   </div>
   <div class="container">
