start of adding buttons to record user scores for live demo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <svg id="flow" height="600" width="900" class="left"> </svg>
     <div id="error" class="right">
       <p id="error-text" height="600">Error: </p>
+      <button onclick="newUser()">New Trial</button>
+      <button onclick="saveTrial()">Done</button>
     </div>
   </div>
   <div class="container">
