--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <svg id="flow" height="600" width="900" class="left"> </svg>
     <div id="error" class="right">
       <p id="error-text" height="600">Error: </p>
-      <button onclick="newUser()">New Trial</button>
+      <button id="newuserbutton">New Trial</button>
       <button onclick="saveTrial()">Done</button>
     </div>
   </div>
